k8s/gitops/20-network/base/default-deny/argocd-default-deny.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: argocd-default-deny
  namespace: argocd
spec:
  endpointSelector: {}
  ingress: []
  egress: []
