k8s/gitops/20-network/base/default-deny/backend-default-deny.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: backend-default-deny
  namespace: back
spec:
  endpointSelector: {}
  ingress: []
  egress: []
