k8s/gitops/20-network/base/default-deny/external-secrets-default-deny.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: external-secrets-default-deny
  namespace: external-secrets
spec:
  endpointSelector: {}
  ingress: []
  egress: []
