k8s/gitops/20-network/base/default-deny/frontend-default-deny.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: frontend-default-deny
  namespace: front
spec:
  endpointSelector: {}
  ingress: []
  egress: []
