k8s/gitops/20-network/base/default-deny/mongodb-default-deny.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: mongodb-default-deny
  namespace: db
spec:
  endpointSelector: {}
  ingress: []
  egress: []
