k8s/gitops/20-network/base/default-deny/monitoring-default-deny.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: monitoring-default-deny
  namespace: monitoring
spec:
  endpointSelector: {}
  ingress: []
  egress: []
